--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "engine"
+name = "ArbEngine"
 version = "0.1.0"
 edition = "2024"
 
@@ -10,4 +10,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 itertools = "0.14.0"
 anyhow = "1.0"
+
+[lib]
+path = "src/lib.rs"
+
 
