--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 itertools = "0.14.0"
 anyhow = "1.0"
+dotenv = "0.15"
 
 [lib]
 path = "src/lib.rs"
