--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -12,7 +12,18 @@ itertools = "0.14.0"
 anyhow = "1.0"
 dotenv = "0.15"
 
+alloy = { version = "1.1.3", features = [
+  "full",
+  "node-bindings",
+  "provider-debug-api",
+] }
+eyre = "0.6.12"
+futures-util = "0.3.31"
+dashmap = "6.1.0"
+
+
 [lib]
 path = "src/lib.rs"
+
 
 
